@@ -10,7 +10,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'de.thetaphi:forbiddenapis:2.7'
+		classpath 'de.thetaphi:forbiddenapis:3.0.1'
 	}
 }
 
@@ -21,7 +21,6 @@ import org.apache.tools.ant.filters.ReplaceTokens
  * Support for modules that contain Java code
  */
 
-apply from: rootProject.file( 'gradle/base-information.gradle' )
 apply from: rootProject.file( 'gradle/libraries.gradle' )
 apply from: rootProject.file( 'gradle/databases.gradle' )
 
@@ -72,32 +71,36 @@ dependencies {
 	testCompile( libraries.byteman_install )
 	testCompile( libraries.byteman_bmunit )
 
-	testRuntime( libraries.log4j )
-	testRuntime( libraries.javassist )
+	testRuntime( libraries.log4j2 )
 	testRuntime( libraries.byteBuddy )
 
 	//Databases
 	testRuntime( libraries.h2 )
+	testRuntime( libraries.derby )
 	testRuntime( libraries.hsqldb )
 	testRuntime( libraries.postgresql )
-	testRuntime( libraries.mysql )
-	testRuntime( libraries.mariadb )
 	testRuntime( libraries.mssql )
 	testRuntime( libraries.informix )
-	testRuntime( libraries.hana )
+	testRuntime( libraries.cockroachdb )
+	testRuntime( libraries.oracle )
+	testRuntime( libraries.sybase )
 
 	asciidoclet 'org.asciidoctor:asciidoclet:1.+'
 
-	if ( db.equalsIgnoreCase( 'oracle' ) ) {
-		testRuntime( libraries.oracle ) {
-			exclude group: 'com.oracle.jdbc', module: 'xmlparserv2'
-		}
-	}
-	else if ( db.equalsIgnoreCase( 'db2' ) ) {
+	// Since both the DB2 driver and HANA have a package "net.jpountz" we have to add dependencies conditionally
+	// This is due to the "no split-packages" requirement of Java 9+
+
+	if ( db.startsWith( 'db2' ) ) {
 		testRuntime( libraries.db2 )
 	}
-	else if ( db.equalsIgnoreCase( 'hana' ) ) {
+	else if ( db.startsWith( 'hana' ) ) {
 		testRuntime( libraries.hana )
+	}
+	else if ( db.startsWith( 'mysql' ) ) {
+		testRuntimeOnly libraries.mysql
+	}
+	else if ( db.startsWith( 'mariadb' ) ) {
+		testRuntimeOnly libraries.mariadb
 	}
 
 	// Mac-specific
@@ -113,17 +116,76 @@ dependencies {
 
 tasks.withType( JavaCompile ) {
 	options.encoding = 'UTF-8'
-	sourceCompatibility = project.baselineJavaVersion
-	targetCompatibility = project.baselineJavaVersion
 }
 
-if ( project.baselineJavaVersion != gradle.ext.testedJavaVersion ) {
-	logger.info( "Forcing the target bytecode version for test classes to '$gradle.ext.testedJavaVersion'" )
+if ( !gradle.ext.javaToolchainEnabled ) {
+	tasks.compileJava.configure {
+		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
+		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.main.release )
+	}
+	tasks.compileTestJava.configure {
+		sourceCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
+		targetCompatibility = JavaVersion.toVersion( gradle.ext.javaVersions.test.release )
+	}
+}
+else {
+	// Configure generated bytecode
+	// "sourceCompatibility" is not supported with toolchains. We have to work around that limitation.
+	tasks.compileJava.configure {
+		if ( gradle.ext.javaVersions.main.compiler.asInt() < 9 ) {
+			options.compilerArgs << '-source'
+			options.compilerArgs << gradle.ext.javaVersions.main.release.toString()
+			options.compilerArgs << '-target'
+			options.compilerArgs << gradle.ext.javaVersions.main.release.toString()
+		} else {
+			options.release = gradle.ext.javaVersions.main.release.asInt()
+			// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
+			options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
+		}
+	}
+	tasks.compileTestJava.configure {
+		if ( gradle.ext.javaVersions.test.compiler.asInt() < 9 ) {
+			options.compilerArgs << '-source'
+			options.compilerArgs << gradle.ext.javaVersions.test.release.toString()
+			options.compilerArgs << '-target'
+			options.compilerArgs << gradle.ext.javaVersions.test.release.toString()
+		} else {
+			options.release = gradle.ext.javaVersions.test.release.asInt()
+			// Needs add-opens because of https://github.com/gradle/gradle/issues/15538
+			options.forkOptions.jvmArgs.addAll( ["--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"] )
+		}
+	}
 
+	// Configure version of Java tools
+	java {
+		toolchain {
+			languageVersion = gradle.ext.javaVersions.main.compiler
+		}
+	}
 	tasks.compileTestJava {
-		// For *tests only*, generate bytecode matching the Java version currently in use.
-		// This allows testing bytecode enhancement on the latest Java versions (13, 14, ...).
-		targetCompatibility = gradle.ext.testedJavaVersion
+		javaCompiler = javaToolchains.compilerFor {
+			languageVersion = gradle.ext.javaVersions.test.compiler
+		}
+	}
+
+	// Configure JVM Options
+	tasks.withType( JavaCompile ).configureEach {
+		options.forkOptions.jvmArgs.addAll( getProperty( 'toolchain.compiler.jvmargs' ).toString().split( ' ' ) )
+	}
+	tasks.withType( Javadoc ).configureEach {
+		options.setJFlags( getProperty( 'toolchain.javadoc.jvmargs' ).toString().split( ' ' ).toList().findAll( { !it.isEmpty() } ) )
+	}
+
+	// Display version of Java tools
+	tasks.withType( JavaCompile ).configureEach {
+		doFirst {
+			logger.lifecycle "Compiling with '${javaCompiler.get().metadata.installationPath}'"
+		}
+	}
+	tasks.withType( Javadoc ).configureEach {
+		doFirst {
+			logger.lifecycle "Generating javadoc with '${javadocTool.get().metadata.installationPath}'"
+		}
 	}
 }
 
@@ -167,18 +229,35 @@ if ( ext.toolsJar.exists() ) {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Testing
 
+if ( gradle.ext.javaToolchainEnabled ) {
+	tasks.test {
+		// Configure version of Java tools
+		javaLauncher = javaToolchains.launcherFor {
+			languageVersion = gradle.ext.javaVersions.test.launcher
+		}
+
+		// Configure JVM Options
+		jvmArgs( getProperty( 'toolchain.launcher.jvmargs' ).toString().split( ' ' ) )
+
+		// Display version of Java tools
+		doFirst {
+			logger.lifecycle "Testing with '${javaLauncher.get().metadata.installationPath}'"
+		}
+	}
+}
+
 tasks.withType( Test.class ).all { task ->
-	if ( JavaVersion.current().isJava9Compatible() ) {
+	if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
 		// Byteman needs this property to be set, https://developer.jboss.org/thread/274997
 		task.jvmArgs += ["-Djdk.attach.allowAttachSelf=true"]
 	}
 	task.jvmArgs += [
 			'-XX:+HeapDumpOnOutOfMemoryError',
 			"-XX:HeapDumpPath=${file( "${buildDir}/OOM-dump.hprof" ).absolutePath}",
-			'-XX:MetaspaceSize=512M'
+			'-XX:MetaspaceSize=256M'
 	]
 
-	task.maxHeapSize = '4G'
+	task.maxHeapSize = '3G'
 
 	task.systemProperties['hibernate.test.validatefailureexpected'] = true
 	task.systemProperties += System.properties.findAll { it.key.startsWith( "hibernate." ) }
@@ -207,10 +286,20 @@ processTestResources {
 	}
 }
 
-// Enable the experimental features of ByteBuddy with JDK 15+
+// Keep system properties in sync with gradle.properties!
 test {
-	if ( Integer.valueOf( gradle.ext.testedJavaVersionAsEnum.getMajorVersion() ) >= 15 ) {
-		logger.warn( "The version of java that will be tested is not supported by Bytebuddy by default. " +
+	systemProperty 'user.language', 'en'
+	systemProperty 'user.country', 'US'
+	systemProperty 'user.timezone', 'UTC'
+	systemProperty 'file.encoding', 'UTF-8'
+	// Needed for AdoptOpenJDK on alpine? The problem is similar to this: https://github.com/mockito/mockito/issues/978
+	jvmArgs '-XX:+StartAttachListener'
+}
+
+// Enable the experimental features of ByteBuddy with JDK 19+
+test {
+	if ( gradle.ext.javaVersions.test.release.asInt() >= 19 ) {
+		logger.warn( "The version of Java bytecode that will be tested is not supported by Bytebuddy by default. " +
 				 " Setting 'net.bytebuddy.experimental=true'." )
 		systemProperty 'net.bytebuddy.experimental', true
 	}
@@ -294,15 +383,11 @@ task copyResourcesToIntelliJOutFolder {
 
  Afterward, you can run any test from the IDE against that particular DB.
  */
-task setDataBase {
-	inputs.property( "db", db )
-	doLast {
-		processTestResources.execute()
-		copyResourcesToIntelliJOutFolder.execute()
-
-		println( 'Setting current database to ' + db )
-	}
+task setDataBase dependsOn( processTestResources, copyResourcesToIntelliJOutFolder ) {
+	println( 'Setting current database to ' + db )
 }
+
+copyResourcesToIntelliJOutFolder.mustRunAfter processTestResources
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Report configs
@@ -334,19 +419,27 @@ task forbiddenApisSystemOut(type: CheckForbiddenApis, dependsOn: compileJava) {
 	targetCompatibility = project.forbiddenAPITargetJDKCompatibility
 	bundledSignatures += 'jdk-system-out'
 	suppressAnnotations += ['org.hibernate.internal.build.AllowSysOut', 'org.hibernate.internal.build.AllowPrintStacktrace']
+
+	// This slows down the checks a little, but is necessary to avoid the gradle deamon holding on
+	// to class definitions loaded previously - even possibly in a previous build.
+	disableClassloadingCache = true
 }
 
 task forbiddenApisUnsafe(type: CheckForbiddenApis, dependsOn: compileJava) {
 	classesDirs = project.sourceSets.main.output.classesDirs
 	classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
 	targetCompatibility = project.forbiddenAPITargetJDKCompatibility
-	bundledSignatures += "jdk-unsafe-${baselineJavaVersion}".toString()
+	bundledSignatures += "jdk-unsafe-${gradle.ext.baselineJavaVersion}".toString()
 
 	// unfortunately we currently have many uses of default Locale implicitly (~370) which need to be fixed
 	// before we can fully enabled this check
 	//
 	// No idea how findbugs was missing these b4
 	ignoreFailures = true
+
+	// This slows down the checks a little, but is necessary to avoid the gradle deamon holding on
+	// to class definitions loaded previously - even possibly in a previous build.
+	disableClassloadingCache = true
 }
 
 task forbiddenApisNonPortable(type: CheckForbiddenApis, dependsOn: compileJava) {
@@ -354,6 +447,10 @@ task forbiddenApisNonPortable(type: CheckForbiddenApis, dependsOn: compileJava) 
 	classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
 	targetCompatibility = project.forbiddenAPITargetJDKCompatibility
 	bundledSignatures += 'jdk-non-portable'
+
+	// This slows down the checks a little, but is necessary to avoid the gradle deamon holding on
+	// to class definitions loaded previously - even possibly in a previous build.
+	disableClassloadingCache = true
 }
 
 task forbiddenApis
